<resources>
    <string name="app_name">ATEM</string>
    <string name="title_home">Inicio</string>
    <string name="title_habitos">Habitos</string>
    <string name="title_pomodoro">Pomodoro</string>
    <string name="title_usuario">Usuario</string>
    <string name="title_rutina">Rutina</string>
    <string name="inputError">Ingrese numeros</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>