<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item android:id="@+id/navigation_rut"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/title_rutina"
        />
    <item
        android:id="@+id/navigation_hab"
        android:icon="@drawable/baseline_check_24"
        android:title="@string/title_habitos" />

    <item
        android:id="@+id/navigation_pomo"
        android:icon="@drawable/baseline_access_time_24"
        android:title="@string/title_pomodoro" />
    <item
        android:id="@+id/navigation_usuario"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_usuario" />
</menu>